# sample-ddd-connect-external-api

./: .gitignore  pyproject.toml
src/: main.py
src/api/: routes.py
src/domain/post/: post.py
src/infrastructure/external_api/jsonplaceholder/: post.py
src/infrastructure/persistence/: sqlite.py
src/infrastructure/persistence/post/: post_dto.py
src/infrastructure/persistence/sqlite/post/: __init__.py  post_dto.py  post_repository.py
src/onion/domain/post/: __init__.py  post_repository.py  post_service.py
src/onion/infrastructure/external_api/jsonplaceholder/: __init__.py  post.py  post_service.py
src/onion/infrastructure/persistence/: sqlite.py
src/onion/infrastructure/persistence/post/: post_dto.py  post_repository.py
src/onion/usecase/post/: __init__.py  post_command_usecase.py  post_query_model.py
src/usecase/: save_external_data_interactor.py
