[tool.poetry]
name = "sample-ddd-connect-external-api"
version = "0.1.0"
description = ""
authors = ["konekato <k1shock1125@gmail.com>"]
readme = "README.md"
packages = [{include = "sample_ddd_connect_external_api"}]

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^2.0.9"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
